(fix)Fix cut off bottom margins

--- a/packages/esm-active-visits-app/src/active-visits-widget/active-visits.scss
+++ b/packages/esm-active-visits-app/src/active-visits-widget/active-visits.scss
@@ -9,10 +9,10 @@
 .activeVisitsContainer {
   background-color: $ui-02;
   border: 1px solid $ui-03;
-  border-bottom: none;
   width: 100%;
   margin: 0 auto;
   max-width: 95vw;
+  padding-bottom: 0;
 }
 
 .activeVisitsDetailHeaderContainer {
